applications/zoneminder/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zoneminder
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
